Add brush filter
Replace zoom controls with layer control with demographic brush filter and filtering options.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -88,6 +88,10 @@ td.num-cell, th.num-cell {
   display: none;
 }
 
+.brushed-hidden {
+  display: none;
+}
+
 footer {
   margin-top: 30px;
   font-size: 10px;
