Add scroll to results table
Scroll table body, fix head if results table exceeds max height.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,6 +12,17 @@ html, body {
 #results {
   font-size: 16px;
   margin: 20px 0px;
+  max-height: 300px;
+  overflow: auto
+}
+
+#results-table thead tr th {
+  position: sticky;
+  top: 0;
+}
+
+#results-table th {
+  background: white;
 }
 
 td {
