Wrap results table in div
This commit ensures scroll on overflow applies only to the result table and not the total results div.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,11 +12,14 @@ html, body {
 #results {
   font-size: 16px;
   margin: 20px 0px;
+}
+
+#results-table-wrapper {
   max-height: 300px;
   overflow: auto
 }
 
-#results-table thead tr th, .caption table thead tr th, .caption h4 {
+#results-table thead tr th, #caption-table table thead tr th, .caption h4 {
   position: sticky;
   top: 0;
 }
